# tomb

./: .gitignore  README.rst  requirements.txt  setup.cfg  tox.ini
tests/scripts/: test_init.py
tomb/scaffolds/base/: __init__.py
tomb/scaffolds/base/template/: README.rst_tmpl  app.ini_tmpl  requirements.txt  setup.cfg_tmpl  tox.ini_tmpl
tomb/scaffolds/base/template/+package+/: __init__.py  views.py
tomb/scaffolds/base/template/+package+/templates/: index.mako_tmpl  layout.mako_tmpl
tomb/scripts/: __init__.py
