[metadata]
name = tomb
author = John Anderson
author_email = johna@gmail.com
summary = A set of sane defaults for the Pyramid web framework
description-file = README.rst
home-page = http://www.trypyramid.com

[files]
packages =
    tomb

[entry_points]
console_scripts =
    tomb = tomb.scripts:tomb

[pbr]
warnerrors = True
